--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -39,18 +39,17 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" [routerLink]="['']">Home</a>
+            <a class="nav-link" aria-current="page" [routerLink]="['']" (click)="closeOffcanvas()">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" [routerLink]="['gallery']"
-              >Galeria</a
+            <a class="nav-link" aria-current="page" [routerLink]="['gallery']" (click)="closeOffcanvas()">Galeria</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['partys']">Nuestras fiestas</a>
+            <a class="nav-link" [routerLink]="['partys']" (click)="closeOffcanvas()">Nuestras fiestas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['contact']">Contacto</a>
+            <a class="nav-link" [routerLink]="['contact']" (click)="closeOffcanvas()">Contacto</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -63,8 +62,8 @@
               Menu Admin
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Añadir fiestas</a></li>
-              <li><a class="dropdown-item" href="#">Clientes</a></li>
+              <li><a class="dropdown-item" href="#" (click)="closeOffcanvas()">Añadir fiestas</a></li>
+              <li><a class="dropdown-item" href="#" (click)="closeOffcanvas()">Clientes</a></li>
               <!-- <li>
                   <hr class="dropdown-divider">
                 </li> -->
