formulario anadir fiesta

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -62,7 +62,7 @@
               Menu Admin
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#" (click)="closeOffcanvas()">Añadir fiestas</a></li>
+              <li><a class="dropdown-item" [routerLink]="['add/party']" (click)="closeOffcanvas()">Añadir fiestas</a></li>
               <li><a class="dropdown-item" href="#" (click)="closeOffcanvas()">Clientes</a></li>
               <!-- <li>
                   <hr class="dropdown-divider">
