--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+/* Estilos para los botones */
+.boton {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+    border-radius: 18px;
+    /* background-color: rgb(13, 231, 231) !important; */
+    background-color: rgb(13, 53, 231) !important;
+    padding: 10px 30px;
+    border: none;
+    margin-top: 15px;
+    /* border: 1px solid  rgb(13, 231, 231); */
+    /* border: 1px solid  rgb(13, 53, 231);
+      box-shadow: inset 0 0 0 2px white; */
+      cursor: pointer;
+  }
+  .boton:hover {
+    transform: scale(1.1);
+    box-shadow: inset 0 0 0 2px white, 0 0 15px rgba(0, 0, 0, 0.2);
+  }
+  
+  .boton:disabled {
+    background-color: #007bff; /* Manten el mismo color de fondo */
+    color: white; /* Color de texto */
+    opacity: 0.5; /* Opacidad más baja para indicar que está deshabilitado */
+    cursor: not-allowed; /* Cambia el cursor para mostrar que no es clickeable */
+  }
+  .boton:disabled:hover {
+    transform: scale(1);
+    box-shadow: inset 0 0 0 2px white, 0 0 15px rgba(0, 0, 0, 0.2);
+  }
