--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -33,10 +33,9 @@
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <!-- Content -->
               <h6 class="text-uppercase fw-bold"><img
-        
-                src="../../../assets/images/logo.png"
-                width="100"
-                height="100"
+                src="/images/logo.JPG"
+                width="40"
+                height="40"
                 alt="logo"
               /></h6>
               <hr
@@ -123,7 +122,7 @@
            >
         © 2024 Copyright:
         <a class="text-white" href="https://mdbootstrap.com/"
-           >App developed by OSMB</a
+           >App developed by M&O</a
           >
       </div>
       <!-- Copyright -->
