--- a/src/app/pages/add-party/add-party.component.css
+++ b/src/app/pages/add-party/add-party.component.css
@@ -7,7 +7,10 @@
     /* background-color: #fff; */
     padding: 20px;
     border-radius: 8px;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    /* margin: 10px; */
+    background-color: black;
+    
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Contenedor de la imagen */
