--- a/src/app/pages/add-party/add-party.component.html
+++ b/src/app/pages/add-party/add-party.component.html
@@ -4,7 +4,7 @@
   </div> -->
   <div class="login-container">
     <img
-      src="/images/logo.avif"
+      src="/images/logo.JPG"
       width="80"
       height="80"
       alt="logo"
