--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -58,15 +58,17 @@
                   class="mb-4 mt-0 d-inline-block mx-auto"
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
-              <p>
-                <a class="me-4 text-reset p-2"><img src="../../../assets/images/facebook.png" style="width: 35px;"/></a>
-              </p>
-              <p>
-                <a class="me-4 text-reset p-2"><img src="../../../assets/images/X.png" style="width: 35px;"/></a>
-              </p>
-              <p>
-                <a class="me-4 text-reset p-2"><img src="../../../assets/images/instagram.png" style="width: 35px;"/></a>
-              </p>
+                  <div class="d-flex justify-content-center">
+                    <a class="me-4 text-reset p-2"
+                      ><img src="/images/instagram.png" style="width: 35px"
+                    /></a>
+                    <a class="me-4 text-reset p-2"
+                      ><img src="/images/X.png" style="width: 35px"
+                    /></a>
+                    <a class="me-4 text-reset p-2"
+                      ><img src="/images/facebook.png" style="width: 35px"
+                    /></a>
+                  </div>
               <!-- <p>
                 <a href="#!" class="text-white">Bootstrap Angular</a>
               </p> -->
@@ -103,7 +105,7 @@
                   class="mb-4 mt-0 d-inline-block mx-auto"
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
-              <p><i class="fas fa-home mr-3"></i> Bilbao</p>
+              <p><i class="fas fa-home mr-3"></i> Madrid</p>
               <p><i class="fas fa-envelope mr-3"></i> infoexample.com</p>
               <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
               <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
