--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -58,7 +58,7 @@
           </li>
           <hr style="color: white;"/>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['partys']" (click)="closeOffcanvas()">Nuestras fiestas</a>
+            <a class="nav-link" [routerLink]="['partys']" (click)="closeOffcanvas()">Calendario de fiestas</a>
           </li>
           <hr style="color: white;"/>
           <li class="nav-item">
