--- a/src/app/core/components/navbar/navbar.component.css
+++ b/src/app/core/components/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 span, h1, a, h5 {
     font-size: 16px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Orbitron', sans-serif;
     color:white;
   }
 
