--- a/src/app/pages/partys/partys.component.html
+++ b/src/app/pages/partys/partys.component.html
@@ -1,1 +1,112 @@
-<p style="margin-top: 50px;">partys works!</p>
+
+<h1  class="sticky-header">Fiestas {{obtenerMesActual()}}</h1>
+<p>No te pierdas las fiestas más locas de la noche madrileña. El mejor ambiente swinger en el local liberal de referencia de Madrid.</p>
+<div class="card-container">
+    <div class="card">
+      <img src="/images/fiesta2.jpg" alt="Noche Traviesa">
+      <div class="overlay">
+        <h2>NOCHE TRAVIESA</h2>
+        <p>Martes 17/10/2024 22:30</p>
+        <!-- <span></span> -->
+      </div>
+    </div>
+    
+    <div class="card">
+      <img src="/images/fiesta1.jpg" alt="Black Party">
+      <div class="overlay">
+        <h2>BLACK PARTY</h2>
+        <p>Miércoles 18/10/2024 22:30</p>
+        <!-- <span></span> -->
+      </div>
+    </div>
+    
+    <div class="card">
+      <img src="/images/fiesta2.jpg" alt="Cuckold Hot Wif">
+      <div class="overlay">
+        <h2>CUCKOLD HOT WIF</h2>
+        <p>Jueves 19/10/2024 22:30</p>
+        <!-- <span></span> -->
+      </div>
+    </div>
+    <div class="card">
+        <img src="/images/fiesta3.jpg" alt="Cuckold Hot Wif">
+        <div class="overlay">
+          <h2>CUCKOLD HOT WIF</h2>
+          <p>Jueves 19/10/2024 22:30</p>
+          <!-- <span></span> -->
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/fiesta1.jpg" alt="Cuckold Hot Wif">
+        <div class="overlay">
+          <h2>CUCKOLD HOT WIF</h2>
+          <p>Jueves 19/10/2024 22:30</p>
+          <!-- <span></span> -->
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/fiesta2.jpg" alt="Cuckold Hot Wif">
+        <div class="overlay">
+          <h2>CUCKOLD HOT WIF</h2>
+          <p>Jueves 19/10/2024 22:30</p>
+          <!-- <span></span> -->
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/fiesta3.jpg" alt="Cuckold Hot Wif">
+        <div class="overlay">
+          <h2>CUCKOLD HOT WIF</h2>
+          <p>Jueves 19/10/2024 22:30</p>
+          <!-- <span></span> -->
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/fiesta1.jpg" alt="Cuckold Hot Wif">
+        <div class="overlay">
+          <h2>CUCKOLD HOT WIF</h2>
+          <p>Jueves 19/10/2024 22:30</p>
+          <!-- <span></span> -->
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/fiesta2.jpg" alt="Cuckold Hot Wif">
+        <div class="overlay">
+          <h2>CUCKOLD HOT WIF</h2>
+          <p>Jueves 19/10/2024 22:30</p>
+          <!-- <span></span> -->
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/fiesta3.jpg" alt="Cuckold Hot Wif">
+        <div class="overlay">
+          <h2>CUCKOLD HOT WIF</h2>
+          <p>Jueves 19/10/2024 22:30</p>
+          <!-- <span></span> -->
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/fiesta1.jpg" alt="Cuckold Hot Wif">
+        <div class="overlay">
+          <h2>CUCKOLD HOT WIF</h2>
+          <p>Jueves 19/10/2024 22:30</p>
+          <!-- <span></span> -->
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/fiesta2.jpg" alt="Cuckold Hot Wif">
+        <div class="overlay">
+          <h2>CUCKOLD HOT WIF</h2>
+          <p>Jueves 19/10/2024 22:30</p>
+          <!-- <span></span> -->
+        </div>
+      </div>
+      <div class="card">
+        <img src="/images/fiesta3.jpg" alt="Cuckold Hot Wif">
+        <div class="overlay">
+          <h2>CUCKOLD HOT WIF</h2>
+          <p>Jueves 19/10/2024 22:30</p>
+          <!-- <span></span> -->
+        </div>
+      </div>
+  </div>
+  
