--- a/src/app/pages/add-party/add-party.component.css
+++ b/src/app/pages/add-party/add-party.component.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    height: 550px;
     /* background-color: #fff; */
     padding: 20px;
     border-radius: 8px;
