--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -59,13 +59,13 @@
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
                   <div class="d-flex justify-content-center">
-                    <a class="me-4 text-reset p-2"
+                    <a class="text-reset p-2"
                       ><img src="/images/instagram.png" style="width: 35px"
                     /></a>
-                    <a class="me-4 text-reset p-2"
+                    <a class="text-reset p-2"
                       ><img src="/images/X.png" style="width: 35px"
                     /></a>
-                    <a class="me-4 text-reset p-2"
+                    <a class="text-reset p-2"
                       ><img src="/images/facebook.png" style="width: 35px"
                     /></a>
                   </div>
