--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -49,7 +49,7 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" [routerLink]="['']" (click)="closeOffcanvas()">Home</a>
+            <a class="nav-link" aria-current="page" [routerLink]="['']" (click)="closeOffcanvas()">Inicio</a>
           </li>
           <hr style="color: white;"/>
           <li class="nav-item">
@@ -63,6 +63,10 @@
           <hr style="color: white;"/>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['contact']" (click)="closeOffcanvas()">Contacto</a>
+          </li>
+          <hr style="color: white;"/>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['tarifas']" (click)="closeOffcanvas()">Tarifas</a>
           </li>
           <hr style="color: white;"/>
           <li class="nav-item dropdown">
