--- a/src/app/pages/partys/partys.component.css
+++ b/src/app/pages/partys/partys.component.css
@@ -12,10 +12,10 @@
     font-family: 'Orbitron', sans-serif;
     color: gold;
   }
-  h2, h3, p{
+  h2, p,h3 {
     font-family: 'Oswald', sans-serif;
     color: gold;
-  }
+}
 
   .card-container {
     display: grid;
@@ -55,7 +55,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color: #a31111;
     text-align: center;
     background: rgba(0, 0, 0, 0.4); /* capa semi-transparente */
   }
