--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,8 @@
   min-height: calc(100vh - 120px); 
   padding: 20px;
   width: 100%; /* Elimina max-width */
-  background-color: rgb(36, 0, 70);
+  /* background-color: rgb(36, 0, 70); */
+  background-color: white;
   display: flex;
   flex-direction: column;
 }
