--- a/src/app/pages/tarifas/tarifas.component.html
+++ b/src/app/pages/tarifas/tarifas.component.html
@@ -3,26 +3,26 @@
     <ng-template pTemplate="header">
         <div class="flex align-items-center gap-2">
             <p-avatar 
-                image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" 
+                image="/images/logo.JPG" 
                 size="large" 
                 shape="circle" />
             <span class="font-bold">
-                Amy Elsner
+                Parejas
             </span>
         </div>
     </ng-template>
-    <!-- <ng-template pTemplate="footer">
+    <ng-template pTemplate="footer">
         <div class="flex flex-wrap align-items-center justify-content-between gap-3">
-            <div class="flex align-items-center gap-2">
+            <!-- <div class="flex align-items-center gap-2">
                 <p-button icon="pi pi-user" rounded="true" text="true" />
                 <p-button icon="pi pi-bookmark" severity="secondary" rounded="true" text="true" />
-            </div>
+            </div> -->
             <span class="p-text-secondary">
                 Updated 2 hours ago
             </span>
         </div>
     </ng-template>
-    <ng-template pTemplate="icons">
+    <!-- <ng-template pTemplate="icons">
         <button class="p-panel-header-icon p-link mr-2" (click)="menu.toggle($event)">
             <span class="pi pi-cog"></span>
         </button>
