--- a/src/app/pages/tarifas/tarifas.component.html
+++ b/src/app/pages/tarifas/tarifas.component.html
@@ -1,5 +1,10 @@
-<div class="card">
-    <p-panel [toggleable]="true">
+<div class="card tarifas">
+    <div>
+        <h1>HORARIOS</h1>
+        <h5>De domingo a jueves : 21-05 h.</h5>
+        <h5>Viernes y sábados : 21-06 h</h5>
+    </div>
+    <p-panel [toggleable]="true"  [collapsed]="true" class="mb-3">
     <ng-template pTemplate="header">
         <div class="flex align-items-center gap-2">
             <p-avatar 
@@ -11,26 +16,60 @@
             </span>
         </div>
     </ng-template>
-    <ng-template pTemplate="footer">
-        <div class="flex flex-wrap align-items-center justify-content-between gap-3">
-            <!-- <div class="flex align-items-center gap-2">
-                <p-button icon="pi pi-user" rounded="true" text="true" />
-                <p-button icon="pi pi-bookmark" severity="secondary" rounded="true" text="true" />
-            </div> -->
-            <span class="p-text-secondary">
-                Updated 2 hours ago
-            </span>
-        </div>
-    </ng-template>
-    <!-- <ng-template pTemplate="icons">
-        <button class="p-panel-header-icon p-link mr-2" (click)="menu.toggle($event)">
-            <span class="pi pi-cog"></span>
-        </button>
-        <p-menu #menu id="config_menu" [model]="items" [popup]="true" />
-    </ng-template> -->
     <p class="m-0">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     </p-panel>
+    <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
+        <ng-template pTemplate="header">
+            <div class="flex align-items-center gap-2">
+                <p-avatar 
+                    image="/images/logo.JPG" 
+                    size="large" 
+                    shape="circle" />
+                <span class="font-bold">
+                    Chicos
+                </span>
+            </div>
+        </ng-template>
+        <p class="m-0">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        </p-panel>
+        <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
+            <ng-template pTemplate="header">
+                <div class="flex align-items-center gap-2">
+                    <p-avatar 
+                        image="/images/logo.JPG" 
+                        size="large" 
+                        shape="circle" />
+                    <span class="font-bold">
+                        Chicas
+                    </span>
+                </div>
+            </ng-template>
+            <p class="m-0">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            </p-panel>
+            <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
+                <ng-template pTemplate="header">
+                    <div class="flex align-items-center gap-2">
+                        <p-avatar 
+                            image="/images/logo.JPG" 
+                            size="large" 
+                            shape="circle" />
+                        <span class="font-bold">
+                            Trios
+                        </span>
+                    </div>
+                </ng-template>
+                <p class="m-0">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                </p-panel>
 </div>
