--- a/src/app/pages/tarifas/tarifas.component.html
+++ b/src/app/pages/tarifas/tarifas.component.html
@@ -1,75 +1,64 @@
 <div class="card tarifas">
-    <div>
-        <h1>HORARIOS</h1>
-        <h5>De domingo a jueves : 21-05 h.</h5>
-        <h5>Viernes y sábados : 21-06 h</h5>
-    </div>
-    <p-panel [toggleable]="true"  [collapsed]="true" class="mb-3">
+  <div>
+    <h1>HORARIOS</h1>
+    <h5>De domingo a jueves : 21-05 h.</h5>
+    <h5>Viernes y sábados : 21-06 h</h5>
+  </div>
+  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
     <ng-template pTemplate="header">
-        <div class="flex align-items-center gap-2">
-            <p-avatar 
-                image="/images/logo.JPG" 
-                size="large" 
-                shape="circle" />
-            <span class="font-bold">
-                Parejas
-            </span>
-        </div>
+      <div class="flex align-items-center gap-2">
+        <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
+        <span class="font-bold"> Parejas </span>
+      </div>
     </ng-template>
     <p class="m-0">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      De domingo a jueves (ambos incluidos) – 50€ – 4 copas<br />
+      Viernes – 60€ – 4 copas<br />
+      Sábado – 70€ – 4 copas<br />
+      Víspera de festivo: 50€ con 4 copas y uso completo de instalaciones.<br />
     </p>
-    </p-panel>
-    <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
-        <ng-template pTemplate="header">
-            <div class="flex align-items-center gap-2">
-                <p-avatar 
-                    image="/images/logo.JPG" 
-                    size="large" 
-                    shape="circle" />
-                <span class="font-bold">
-                    Chicos
-                </span>
-            </div>
-        </ng-template>
-        <p class="m-0">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        </p-panel>
-        <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
-            <ng-template pTemplate="header">
-                <div class="flex align-items-center gap-2">
-                    <p-avatar 
-                        image="/images/logo.JPG" 
-                        size="large" 
-                        shape="circle" />
-                    <span class="font-bold">
-                        Chicas
-                    </span>
-                </div>
-            </ng-template>
-            <p class="m-0">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            </p-panel>
-            <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
-                <ng-template pTemplate="header">
-                    <div class="flex align-items-center gap-2">
-                        <p-avatar 
-                            image="/images/logo.JPG" 
-                            size="large" 
-                            shape="circle" />
-                        <span class="font-bold">
-                            Trios
-                        </span>
-                    </div>
-                </ng-template>
-                <p class="m-0">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-                </p-panel>
+  </p-panel>
+  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
+    <ng-template pTemplate="header">
+      <div class="flex align-items-center gap-2">
+        <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
+        <span class="font-bold"> Chicos </span>
+      </div>
+    </ng-template>
+    <p class="m-0">
+        Domingo a miércoles (ambos incluidos) – 50€ – 1 copa y uso completo instalaciones.<br/>
+        Jueves – 30€ – 2 copas y acceso a zona común. Acceso completo a instalaciones supervisado por encargado de sala (+50€)<br/>
+        Vísperas de festivo – 80€ – 2 copas y uso completo instalaciones.<br/>
+        Entrada selectiva bajo supervisión de encargado de sala.<br/>
+    </p>
+  </p-panel>
+  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
+    <ng-template pTemplate="header">
+      <div class="flex align-items-center gap-2">
+        <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
+        <span class="font-bold"> Chicas </span>
+      </div>
+    </ng-template>
+    <p class="m-0">De domingo a jueves – 10€ – 1 copa y uso completo de instalaciones.<br/>
+        Viernes y sábados – 20€ – 1 copa y uso completo de instalaciones.</p>
+  </p-panel>
+  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
+    <ng-template pTemplate="header">
+      <div class="flex align-items-center gap-2">
+        <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
+        <span class="font-bold"> Trios </span>
+      </div>
+    </ng-template>
+    <p class="m-0">
+        Pareja y un chico<br/>
+        Domingo a miércoles 100€ – 5 copas<br/>
+        jueves – 130€ – 6 copas<br/>
+        
+        Pareja y un chica<br/>
+        Viernes y sábado 100€ – 6 copas<br/>
+        Domingo a jueves 70€ – 6 copas<br/>
+        
+        (Los trios siempre tienen uso completo de instalaciones)<br/>
+    </p>
+  </p-panel>
 </div>
