--- a/src/app/pages/tarifas/tarifas.component.html
+++ b/src/app/pages/tarifas/tarifas.component.html
@@ -1,5 +1,5 @@
 <div class="card tarifas">
-  <div>
+  <div class="horario">
     <h1>HORARIOS</h1>
     <h5>De domingo a jueves : 21-05 h.</h5>
     <h5>Viernes y sábados : 21-06 h</h5>
@@ -12,10 +12,10 @@
       </div>
     </ng-template>
     <p class="m-0">
-      De domingo a jueves (ambos incluidos) – 50€ – 4 copas<br />
-      Viernes – 60€ – 4 copas<br />
-      Sábado – 70€ – 4 copas<br />
-      Víspera de festivo: 50€ con 4 copas y uso completo de instalaciones.<br />
+      -De domingo a jueves – 50€ – 4 copas<br />
+      -Viernes – 60€ – 4 copas<br />
+      -Sábado – 70€ – 4 copas<br />
+      -Víspera de festivo: 50€ con 4 copas y uso completo de instalaciones.<br />
     </p>
   </p-panel>
   <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
@@ -26,10 +26,10 @@
       </div>
     </ng-template>
     <p class="m-0">
-        Domingo a miércoles (ambos incluidos) – 50€ – 1 copa y uso completo instalaciones.<br/>
-        Jueves – 30€ – 2 copas y acceso a zona común. Acceso completo a instalaciones supervisado por encargado de sala (+50€)<br/>
-        Vísperas de festivo – 80€ – 2 copas y uso completo instalaciones.<br/>
-        Entrada selectiva bajo supervisión de encargado de sala.<br/>
+        -Domingo a miércoles – 50€ – 1 copa y uso completo instalaciones.<br/>
+        -Jueves – 30€ – 2 copas y acceso a zona común. Acceso completo a instalaciones supervisado por encargado de sala (+50€)<br/>
+        -Vísperas de festivo – 80€ – 2 copas y uso completo instalaciones.<br/>
+        -Entrada selectiva bajo supervisión de encargado de sala.<br/>
     </p>
   </p-panel>
   <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
@@ -39,8 +39,8 @@
         <span class="font-bold"> Chicas </span>
       </div>
     </ng-template>
-    <p class="m-0">De domingo a jueves – 10€ – 1 copa y uso completo de instalaciones.<br/>
-        Viernes y sábados – 20€ – 1 copa y uso completo de instalaciones.</p>
+    <p class="m-0">-De domingo a jueves – 10€ – 1 copa y uso completo de instalaciones.<br/>
+        -Viernes y sábados – 20€ – 1 copa y uso completo de instalaciones.</p>
   </p-panel>
   <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
     <ng-template pTemplate="header">
@@ -50,12 +50,12 @@
       </div>
     </ng-template>
     <p class="m-0">
-        Pareja y un chico<br/>
-        Domingo a miércoles 100€ – 5 copas<br/>
-        jueves – 130€ – 6 copas<br/>        
-        Pareja y un chica<br/>
-        Viernes y sábado 100€ – 6 copas<br/>
-        Domingo a jueves 70€ – 6 copas<br/>        
+        -Pareja y un chico<br/>
+        -Domingo a miércoles 100€ – 5 copas<br/>
+        -Jueves – 130€ – 6 copas<br/>        
+        -Pareja y un chica<br/>
+        -Viernes y sábado 100€ – 6 copas<br/>
+        -Domingo a jueves 70€ – 6 copas<br/>        
         (Los trios siempre tienen uso completo de instalaciones)<br/>
     </p>
   </p-panel>
