--- a/src/app/pages/tarifas/tarifas.component.html
+++ b/src/app/pages/tarifas/tarifas.component.html
@@ -4,7 +4,7 @@
     <h5>De domingo a jueves : 21-05 h.</h5>
     <h5>Viernes y sábados : 21-06 h</h5>
   </div>
-  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
+  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3 custom-panel">
     <ng-template pTemplate="header">
       <div class="flex align-items-center gap-2">
         <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
@@ -18,7 +18,7 @@
       -Víspera de festivo: 50€ con 4 copas y uso completo de instalaciones.<br />
     </p>
   </p-panel>
-  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
+  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3 custom-panel">
     <ng-template pTemplate="header">
       <div class="flex align-items-center gap-2">
         <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
@@ -32,7 +32,7 @@
         -Entrada selectiva bajo supervisión de encargado de sala.<br/>
     </p>
   </p-panel>
-  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
+  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3 custom-panel">
     <ng-template pTemplate="header">
       <div class="flex align-items-center gap-2">
         <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
@@ -42,7 +42,7 @@
     <p class="m-0">-De domingo a jueves – 10€ – 1 copa y uso completo de instalaciones.<br/>
         -Viernes y sábados – 20€ – 1 copa y uso completo de instalaciones.</p>
   </p-panel>
-  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3">
+  <p-panel [toggleable]="true" [collapsed]="true" class="mb-3 custom-panel">
     <ng-template pTemplate="header">
       <div class="flex align-items-center gap-2">
         <p-avatar image="/images/logo.JPG" size="large" shape="circle" />
