--- a/src/app/pages/partys/partys.component.css
+++ b/src/app/pages/partys/partys.component.css
@@ -8,18 +8,19 @@
 
 h1 {
   font-family: 'Orbitron', sans-serif;
-  /* color: gold; */
+  color: white;
 }
 
 h2, p, h3 {
   font-family: 'Oswald', sans-serif;
+  color: white;
   /* color: gold; */
 }
 
 .card-container {
   display: grid;
   gap: 20px;
-  margin: 50px;
+  margin: 10px;
   grid-template-columns: repeat(3, 1fr); /* 3 columnas por defecto */
 }
 
@@ -27,21 +28,20 @@ h2, p, h3 {
 .card {
   position: relative;
   width: 100%;
-  height: 500px; /* Puedes ajustar esto según tus necesidades */
+  height: 500px; 
   overflow: hidden;
   border-radius: 10px;
-  transition: transform 0.3s ease; /* Transición suave */
+  transition: transform 0.3s ease; 
 }
 
 .card img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  filter: brightness(0.5); /* oscurecer imagen */
+  object-fit: cover;  
 }
 
 .card:hover {
-  transform: scale(1.05); /* Aumenta el tamaño al hacer hover */
+  transform: scale(1.1);
 }
 
 /* Estilos para la superposición */
@@ -55,9 +55,9 @@ h2, p, h3 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: #a31111;
+ 
   text-align: center;
-  background: rgba(0, 0, 0, 0.4); /* capa semi-transparente */
+ 
 }
 
 .overlay h2 {
