--- a/src/app/pages/partys/partys.component.html
+++ b/src/app/pages/partys/partys.component.html
@@ -52,14 +52,16 @@
           <!-- <span></span> -->
         </div>
       </div>
-      <div class="card">
-        <img src="/images/fiesta3.jpg" alt="Cuckold Hot Wif">
+      @for(item of partys; track item){
+        <div class="card">
+        <img src={{item.image}} alt="Cuckold Hot Wif">
         <div class="overlay">
-          <h2>CUCKOLD HOT WIF</h2>
-          <p>Jueves 19/10/2024 22:30</p>
+          <h2>{{item.nombre}}</h2>
+          <p>{{item.fecha}}</p>
           <!-- <span></span> -->
         </div>
       </div>
+    }
       <div class="card">
         <img src="/images/fiesta1.jpg" alt="Cuckold Hot Wif">
         <div class="overlay">
