--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,5 @@
     transform: scale(1);
     box-shadow: inset 0 0 0 2px white, 0 0 15px rgba(0, 0, 0, 0.2);
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
