--- a/src/app/pages/partys/partys.component.html
+++ b/src/app/pages/partys/partys.component.html
@@ -4,7 +4,7 @@
 <div class="card-container">
       @for(item of partys; track item){
         <div class="card">
-        <img src={{item.image}} alt="Cuckold Hot Wif">
+        <img src={{item.image}} alt={{item.nombre}}>
         <div class="overlay">
           <h2>{{item.nombre}}</h2>
           <p>{{item.fecha}}</p>
