--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,7 +12,7 @@
 
 .main .content-wrapper {
   max-width: 1200px;
-  margin: 0 auto; /* Mantiene el contenido centrado */
+  margin: 0 auto; 
   width: 100%;
 }
 
