--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,25 @@
   /* margin-top: 100px; */
 }
 
+/*estilos para el boton up*/
+.floating-button-what {
+  position: fixed; 
+  bottom: 75px; 
+  right: 15px; 
+  background-color: #007bff; 
+  color: #fff; 
+  border: none;
+  border-radius: 50%; 
+  width: 50px; 
+  height: 50px; 
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  z-index: 1000; 
+}
+
 .main .content-wrapper {
   max-width: 1200px;
   margin: 0 auto; 
