add login/register components

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -89,6 +89,18 @@
               <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
             </ul>
           </li>
+          <hr style="color: white;"/>
+          <li>
+            <a class="nav-link" routerLink="/login" (click)="closeOffcanvas()">Login</a>
+          </li>
+          <hr style="color: white;"/>
+          <li>
+            <a class="nav-link" routerLink="/register" (click)="closeOffcanvas()">Register</a>
+          </li>
+              <!-- <li>
+                  <hr class="dropdown-divider">
+                </li> -->
+              <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
         </ul>
       </div>
     </div>
