--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="container d-flex flex-column justify-content-center align-items-center imgFondoAuth">
+  <h1 class="text-center titleAuth col-12">Iniciar Sesión</h1>
+  <div class="card p-4" style="max-width: 600px; width: 100%; height: 40%;">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="mx-0 my-auto">
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" id="email" class="form-control" formControlName="email" placeholder="Ingresa tu email">
+        <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" class="text-danger">
+          <small *ngIf="loginForm.get('email')?.hasError('required')">Email es requerido.</small>
+          <small *ngIf="loginForm.get('email')?.hasError('email')">Email no es válido.</small>
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="password" class="form-label">Contraseña</label>
+        <input type="password" id="password" class="form-control" formControlName="password" placeholder="Ingresa tu contraseña">
+        <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="text-danger">
+          <small *ngIf="loginForm.get('password')?.hasError('required')">Contraseña es requerida.</small>
+          <small *ngIf="loginForm.get('password')?.hasError('minlength')">Mínimo 6 caracteres.</small>
+        </div>
+      </div>
+
+      <button type="submit" class="btn btn-primary w-100" [disabled]="loginForm.invalid">Iniciar Sesión</button>
+      <a href="register" class="textAuth" >Aún no tienes usuario, <span class="spanAuth">regístrate</span></a>
+    </form>
+  </div>
+</div>
+
+  
