--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,14 @@
 /* Estilos para los botones */
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+:root{
+  --first-purple: #240048;
+  --second-purple: #3C096C;
+  --third-purple: #5A189A;
+  --background-main: #000000;
+  --details: #EFB810;
+}
+
 .boton {
     display: block;
     width: 80%;
