fix height forms

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,7 +21,9 @@
       </div>
 
       <button type="submit" class="btn btn-primary w-100" [disabled]="loginForm.invalid">Iniciar Sesión</button>
-      <a href="register" class="textAuth" >Aún no tienes usuario, <span class="spanAuth">regístrate</span></a>
+      <div class="container">
+        <a href="register" class="textAuth" >Aún no tienes usuario, <span class="spanAuth">regístrate</span></a>
+      </div>
     </form>
   </div>
 </div>
