--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -6,7 +6,7 @@
   --details: #EFB810;
 }
 .imgFondoAuth{
-  height: 80vh;
+  height: 100vh;
  /* Asegura que el contenedor ocupe todo el ancho del viewport */
   overflow: hidden;
 }
@@ -29,7 +29,6 @@
   margin-bottom: 60px;
   opacity: 1;
   z-index: 1; 
-
 }
 .card {
   background-color: rgba(0, 4, 7, 0);
@@ -50,11 +49,17 @@
 .text-danger {
   color: #ff4d4d;
 }
+.container{
+  display: grid;
+  align-items: center;
+  margin-top: 5px;
+}
 .textAuth{
   width: 100%;
   color: white;
   text-decoration: none;
   text-align: center;
+  font-size: small;
 }
 .spanAuth{
   text-transform: uppercase;
@@ -64,20 +69,38 @@
   color: var(--details);
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 1200px) {
   .titleAuth{
     font-size:180px;
+  }
+  label{
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .titleAuth{
+    font-size:130px;
+  }
+  label{
+    font-size: 23px;
   }
 }
 
 @media (max-width: 768px) {
   .titleAuth{
-    font-size:100px;
+    font-size:80px;
+  }
+  label{
+    font-size: 19px;
   }
 }
 
 @media (max-width: 576px) {
   .titleAuth{
-    font-size:80px;
+    font-size:50px;
+  }
+  label{
+    font-size: 15px;
   }
 }
