--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -1,39 +1,39 @@
 :root {
   --first-purple: #240048;
-  --second-purple: #3c096c;
-  --third-purple: #5a189a;
+  --second-purple: #3C096C;
+  --third-purple: #5A189A;
   --background-main: #000000;
-  --details: #efb810;
+  --details: #EFB810;
 }
-
-.imgFondoAuth {
-  height: 80vh;
+.imgFondoAuth{
+  height: 100vh;
+ /* Asegura que el contenedor ocupe todo el ancho del viewport */
   overflow: hidden;
 }
-.imgFondoAuth:before {
+.imgFondoAuth:before{
   background-image: url(../../../../public/images/fondo.jpg);
   background-position: center;
   background-size: cover;
   opacity: 0.4;
   width: 100%;
   height: 100%;
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
 }
-.titleAuth {
+.titleAuth{
   color: white;
-  font-size: 180px;
+  font-size:180px;
   font-family: "Bebas Neue", sans-serif;
-  margin-bottom: 60px !important;
+  margin-bottom: 60px;
   opacity: 1;
-  z-index: 1;
+  z-index: 1; 
 }
 .card {
   background-color: rgba(0, 4, 7, 0);
+  border: none;
   color: white;
-  border:none;
 }
 
 .btn-primary {
@@ -49,11 +49,17 @@
 .text-danger {
   color: #ff4d4d;
 }
+.container{
+  display: grid;
+  align-items: center;
+  margin-top: 5px;
+}
 .textAuth{
   width: 100%;
   color: white;
   text-decoration: none;
   text-align: center;
+  font-size: small;
 }
 .spanAuth{
   text-transform: uppercase;
@@ -63,19 +69,38 @@
   color: var(--details);
 }
 
-@media only screen and (min-width: 768px) {
-  .titleAuth {
-    font-size: 80px;
+@media (min-width: 1200px) {
+  .titleAuth{
+    font-size:180px;
+  }
+  label{
+    font-size: 25px;
   }
 }
 
-@media only screen and (max-width: 768px) {
-  .titleAuth {
-    font-size: 80px;
+@media (max-width: 1200px) {
+  .titleAuth{
+    font-size:130px;
+  }
+  label{
+    font-size: 23px;
   }
 }
-@media only screen and (min-width: 768px) {
-  .titleAuth {
-    font-size: 180px;
+
+@media (max-width: 768px) {
+  .titleAuth{
+    font-size:80px;
+  }
+  label{
+    font-size: 19px;
+  }
+}
+
+@media (max-width: 576px) {
+  .titleAuth{
+    font-size:50px;
+  }
+  label{
+    font-size: 15px;
   }
 }
