--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex flex-column justify-content-center align-items-center imgFondoAuth">
     <h1 class="text-center mb-4 titleAuth col-12">Crea tu cuenta</h1>
-    <div class="card p-4" style="max-width: 600px; width: 100%;height: 40%;">
+    <div class="card p-4" style="max-width: 600px; width: 100%;">
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="mx-0 my-auto">
         <div class="mb-3">
           <label for="email" class="form-label">Email</label>
@@ -29,7 +29,9 @@
         </div>
   
         <button type="submit" class="btn btn-primary w-100" [disabled]="registerForm.invalid">Registrarse</button>
-        <a href="login" class="textAuth">Ya tienes cuenta, <span class="spanAuth">Inicia Sesión</span></a>
+        <div class="container">
+          <a href="login" class="textAuth">Ya tienes cuenta, <span class="spanAuth">Inicia Sesión</span></a>
+        </div>
       </form>
     </div>
   </div>
