--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -2,7 +2,7 @@
   class="containerAuth"
 >
   <div class="container d-flex flex-column justify-content-center align-items-center imgFondoAuth">
-    <h1 class="text-center mb-4 titleAuth col-12">Crea tu cuenta</h1>
+    <h1 class="text-center mb-4 titleAuth col-12">Únete a Alma's w</h1>
     <div class="card p-4" style="max-width: 600px; width: 100%">
       <form
         [formGroup]="registerForm"
@@ -86,8 +86,8 @@
           Registrarse
         </button>
         <div class="container">
-          <a href="login" class="textAuth"
-            >Ya tienes cuenta, <span class="spanAuth">Inicia Sesión</span></a
+          <a href="login" class="textAuth mt-3"
+            >¿Ya tienes cuenta?, <span class="spanAuth">Inicia Sesión</span></a
           >
         </div>
       </form>
