--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="containerAuth">
   <div
-    class="container d-flex flex-column justify-content-center align-items-center imgFondoAuth"
+    class="container d-flex flex-column justify-content-center align-items-center imgFondoAuth" 
   >
-    <h1 class="text-center titleAuth col-12">Iniciar Sesión</h1>
+    <h1 class="text-center titleAuth col-12">Accede a Tu Fantasía</h1>
     <div class="card p-4" style="max-width: 600px; width: 100%; height: 40%">
       <form
         [formGroup]="loginForm"
@@ -66,7 +66,7 @@
           Iniciar Sesión
         </button>
         <div class="container">
-          <a href="register" class="textAuth"
+          <a href="register" class="textAuth mt-3"
             >Aún no tienes usuario, <span class="spanAuth">regístrate</span></a
           >
         </div>
