--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -7,6 +7,7 @@
 }
 .containerAuth{
   height: 80vh;
+  display: flex;
 }
 .imgFondoAuth{
   overflow: hidden;
@@ -71,7 +72,7 @@
 
 @media (min-width: 1200px) {
   .titleAuth{
-    font-size:180px;
+    font-size:90px;
   }
   label{
     font-size: 25px;
@@ -80,7 +81,7 @@
 
 @media (max-width: 1200px) {
   .titleAuth{
-    font-size:130px;
+    font-size:90px;
   }
   label{
     font-size: 23px;
