ajuste de sol para admin

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -69,7 +69,7 @@
             <a class="nav-link" [routerLink]="['tarifas']" (click)="closeOffcanvas()">Tarifas</a>
           </li>
           <hr style="color: white;"/>
-          @if(activeUser && activeUser.data.rol === "'admin'"){
+          @if(activeUser && activeUser.data.rol === "admin"){
           <li class="nav-item dropdown"    >
             <a
               class="nav-link dropdown-toggle"
