--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -91,14 +91,26 @@
             </ul>
           </li>
           <hr style="color: white;"/>
-        }        
-          <li>
-            <a class="nav-link" routerLink="/login" (click)="closeOffcanvas()">Login</a>
-          </li>
-          <hr style="color: white;"/>
-          <li>
-            <a class="nav-link" routerLink="/register" (click)="closeOffcanvas()">Register</a>
-          </li>
+        } 
+        @if(!activeUser){
+          <div>
+            <li>
+              <a class="nav-link" [routerLink]="['/login']" (click)="closeOffcanvas()">Login</a>
+            </li>
+            <hr style="color: white;"/>
+            <li>
+              <a class="nav-link" [routerLink]="['/register']" (click)="closeOffcanvas()">Register</a>
+            </li>
+            <hr style="color: white;"/>
+          </div> 
+        }  
+        @if(activeUser){
+          <div>
+            <li>
+              <a class="nav-link" (click)="logout()" (click)="closeOffcanvas()">LogOut</a>
+            </li>
+          </div>     
+        }          
               <!-- <li>
                   <hr class="dropdown-divider">
                 </li> -->
