reset password ok

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -95,12 +95,12 @@
         @if(!activeUser){
           <div>
             <li>
-              <a class="nav-link" [routerLink]="['/login']" (click)="closeOffcanvas()">Login</a>
+              <a class="nav-link" [routerLink]="['/login']" (click)="closeOffcanvas()">Login/Register</a>
             </li>
-            <hr style="color: white;"/>
+            <!-- <hr style="color: white;"/>
             <li>
               <a class="nav-link" [routerLink]="['/register']" (click)="closeOffcanvas()">Register</a>
-            </li>
+            </li> -->
             <hr style="color: white;"/>
           </div> 
         }  
