--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -60,6 +60,9 @@
           Iniciar Sesión
         </button>
         <div class="container">
+          <a [routerLink]="['/reset-password']" class="textAuth mt-3"
+            >¿Olvidaste tu contraseña?</a
+          >
           <a href="register" class="textAuth mt-3"
             >Aún no tienes usuario, <span class="spanAuth">regístrate</span></a
           >
