--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -63,7 +63,7 @@
           <a [routerLink]="['/reset-password']" class="textAuth mt-3"
             >¿Olvidaste tu contraseña?</a
           >
-          <a href="register" class="textAuth mt-3"
+          <a [routerLink]="['/register']" class="textAuth mt-3"
             >Aún no tienes usuario, <span class="spanAuth">regístrate</span></a
           >
         </div>
