--- a/src/app/auth/new-password/new-password.component.html
+++ b/src/app/auth/new-password/new-password.component.html
@@ -1,1 +1,69 @@
-<p>new-password works!</p>
+<div class="containerAuth">
+  <div
+    class="container d-flex flex-column justify-content-center align-items-center imgFondoAuth"
+  >
+    <h1 class="text-center titleAuth col-12">Introduce nueva contraseña</h1>
+    <form
+      [formGroup]="newPassword"
+      (ngSubmit)="onSubmit()"
+      class="mx-0 my-auto"
+    >
+      <!-- Campo Contraseña -->
+      <div class="mb-3">
+        <label for="email" class="form-label">Contraseña</label>
+        <input
+          type="password"
+          placeholder="Contraseña"
+          formControlName="password"
+          class="form-control"
+        />
+        @if(newPassword.get('password')?.invalid &&
+        newPassword.get('password')?.touched){
+        <div class="text-danger text-center">
+          @if(newPassword.get('password')?.errors?.['required']){
+          <small style="color: red">El correo es obligatorio</small>
+          } @if(newPassword.get('password')?.errors?.['email']){
+          <small style="color: red">El formato de correo es inválido</small>
+          }
+        </div>
+        }
+      </div>
+
+      <!-- Campo Contraseña confirmar -->
+      <div class="mb-3">
+        <label for="password" class="form-label">Confirmar Contraseña</label>
+        <input
+          type="password"
+          class="form-control"
+          formControlName="confirmPassword"
+          placeholder="Confirmar contraseña"
+        />
+        @if( newPassword.get('confirmPassword')?.invalid &&
+        newPassword.get('password')?.touched){
+        <div>
+          @if(newPassword.get('confirmPassword')?.errors?.['required']){
+          <small style="color: red"
+            >La confirmación de contraseña es obligatoria</small
+          >
+          } @if(newPassword.get('confirmPassword')?.errors?.['minlength']){
+          <small style="color: red">
+            La contraseña debe tener al menos 6 caracteres
+          </small>
+          }
+        </div>
+        }
+      </div>
+
+      <!-- Botón de Enviar -->
+      <button
+        [disabled]="newPassword.invalid"
+        class="boton"
+        style="margin-top: 10px; color: white"
+        type="submit"
+        class="btn btn-primary w-100"
+      >
+        Enviar
+      </button>
+    </form>
+  </div>
+</div>
